--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" data-critters-container>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>customer-registration</title>
-    <base href="/customer-registration/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="--deployUrl=customer-registrationstyles.ef46db3751d8e999.css"></head>
+    <base href="/customer-registration/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="styles.ef46db3751d8e999.css" />
+  </head>
   <body>
     <customer-registration-root></customer-registration-root>
-  <script src="--deployUrl=customer-registrationruntime.5a261b92fc09119f.js" type="module"></script><script src="--deployUrl=customer-registrationpolyfills.8e2e69ec32fb2b71.js" type="module"></script><script src="--deployUrl=customer-registrationmain.305e76d283d48c68.js" type="module"></script></body>
+    <script src="runtime.5a261b92fc09119f.js" type="module"></script>
+    <script src="polyfills.8e2e69ec32fb2b71.js" type="module"></script>
+    <script src="main.305e76d283d48c68.js" type="module"></script>
+  </body>
 </html>
